--- a/src/app/components/bookstore/bookstore-app/bookstore-app.component.html
+++ b/src/app/components/bookstore/bookstore-app/bookstore-app.component.html
@@ -1,8 +1,10 @@
-<div class="row">
-    <div class="col">
-        <ecom-filters></ecom-filters>
-    </div>
-    <div class="col">
-        <ecom-product-list></ecom-product-list>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3">
+            <ecom-filters></ecom-filters>
+        </div>
+        <div class="col-sm-9">
+            <ecom-product-list></ecom-product-list>
+        </div>
     </div>
 </div>
