--- a/src/app/components/bookstore/filters/filters.component.html
+++ b/src/app/components/bookstore/filters/filters.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" style="width:10rem;">
     <div class="card-header">Filtros</div>
     <div class="card-body">
         <form>
